[package]
name = "ord-collections"
version = "0.2.0"
edition = "2021"
authors = ["Patrick Hoffmann <p.hoffmann@berlin.de>"]
repository = "https://github.com/fightling/ord-collections.git"
license = "MIT OR Apache-2.0"
description = "A library offering collections which are pre-sorted automatically."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0", optional = true }

[features]
thiserror = ["dep:thiserror"]
